crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_array_expression_index.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
        index:
          Binary:
            op: Add
            left:
              Identifier:
                name: i
                span:
                  start: 4
                  end: 5
            right:
              Literal:
                - Number: 1
                - start: 8
                  end: 9
            span:
              start: 4
              end: 9
        span:
          start: 0
          end: 10
    value:
      Literal:
        - Number: 99
        - start: 13
          end: 15
    span:
      start: 0
      end: 16
