crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_array_literal_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: items
        span:
          start: 0
          end: 5
          file: "<input>"
    value:
      ArrayLiteral:
        elements:
          - Literal:
              - Number: 1
              - start: 9
                end: 10
                file: "<input>"
          - Literal:
              - Number: 2
              - start: 12
                end: 13
                file: "<input>"
          - Literal:
              - Number: 3
              - start: 15
                end: 16
                file: "<input>"
        span:
          start: 8
          end: 17
          file: "<input>"
    span:
      start: 0
      end: 18
      file: "<input>"
