crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_boolean_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: flag
        span:
          start: 0
          end: 4
          file: "<input>"
    value:
      Literal:
        - Bool: true
        - start: 7
          end: 11
          file: "<input>"
    span:
      start: 0
      end: 12
      file: "<input>"
