crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_expression_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
          file: "<input>"
    value:
      Binary:
        op: Add
        left:
          Literal:
            - Number: 1
            - start: 4
              end: 5
              file: "<input>"
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 8
                  end: 9
                  file: "<input>"
            right:
              Literal:
                - Number: 3
                - start: 12
                  end: 13
                  file: "<input>"
            span:
              start: 8
              end: 13
              file: "<input>"
        span:
          start: 4
          end: 13
          file: "<input>"
    span:
      start: 0
      end: 14
      file: "<input>"
