crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_function_call_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: result
        span:
          start: 0
          end: 6
          file: "<input>"
    value:
      Call:
        callee:
          Identifier:
            name: foo
            span:
              start: 9
              end: 12
              file: "<input>"
        args: []
        span:
          start: 9
          end: 14
          file: "<input>"
    span:
      start: 0
      end: 15
      file: "<input>"
