crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_longer_name.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: myVariable
        span:
          start: 0
          end: 10
          file: "<input>"
    value:
      Literal:
        - Number: 100
        - start: 13
          end: 16
          file: "<input>"
    span:
      start: 0
      end: 17
      file: "<input>"
