crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_nested_array.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Index:
        target:
          Index:
            target:
              Identifier:
                name: matrix
                span:
                  start: 0
                  end: 6
                  file: "<input>"
            index:
              Single:
                Identifier:
                  name: i
                  span:
                    start: 7
                    end: 8
                    file: "<input>"
            span:
              start: 0
              end: 9
              file: "<input>"
        index:
          Identifier:
            name: j
            span:
              start: 10
              end: 11
              file: "<input>"
        span:
          start: 0
          end: 12
          file: "<input>"
    value:
      Literal:
        - Number: 5
        - start: 15
          end: 16
          file: "<input>"
    span:
      start: 0
      end: 17
      file: "<input>"
