crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_null_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: value
        span:
          start: 0
          end: 5
          file: "<input>"
    value:
      Literal:
        - "Null"
        - start: 8
          end: 12
          file: "<input>"
    span:
      start: 0
      end: 13
      file: "<input>"
