crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_simple_name.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
          file: "<input>"
    value:
      Literal:
        - Number: 42
        - start: 4
          end: 6
          file: "<input>"
    span:
      start: 0
      end: 7
      file: "<input>"
