crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__assignment_string_value.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: name
        span:
          start: 0
          end: 4
          file: "<input>"
    value:
      Literal:
        - String: Alice
        - start: 7
          end: 14
          file: "<input>"
    span:
      start: 0
      end: 15
      file: "<input>"
