crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__chained_array_assignment.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Index:
        target:
          Index:
            target:
              Identifier:
                name: matrix
                span:
                  start: 0
                  end: 6
                  file: "<input>"
            index:
              Single:
                Identifier:
                  name: row
                  span:
                    start: 7
                    end: 10
                    file: "<input>"
            span:
              start: 0
              end: 11
              file: "<input>"
        index:
          Identifier:
            name: col
            span:
              start: 12
              end: 15
              file: "<input>"
        span:
          start: 0
          end: 16
          file: "<input>"
    value:
      Identifier:
        name: value
        span:
          start: 19
          end: 24
          file: "<input>"
    span:
      start: 0
      end: 25
      file: "<input>"
